# s3-dashboard

./: AGENTS.md  README.md  acb_generator_final_prompt.md  memory.md  pyproject.toml
docs/: streamlit_dashboard_prompt.md
src/domain_feed_health_dashboard/: __init__.py  app.py  data_model.py  grid_config.py  history_data.py  status.py  table_data.py  ui.py
src/domain_feed_health_dashboard/aws/: s3_client.py  scanner.py
src/domain_feed_health_dashboard/db/: repository.py  schema.py
src/domain_feed_health_dashboard/services/: generator.py  log_parser.py
src/domain_feed_health_dashboard/utils/: cache.py  logger.py
tests/: test_generator_backfill.py  test_grid_config.py  test_history_data.py  test_log_parser.py  test_status.py  test_table_data.py
